CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

28 August 2009
+ changed count to accommodate group by and single col pulls

24 August 2009
+ DBPager : fixed a problem with multiple joinResult calls to same table.

Version 1.9.7
---------------------------------------------------------------------
14 August 2009
+ Fixed browser incompatibility issue with editors.
+ Added ability to set fckeditor's image, media, and files directory in the config.php
+ Updated: 
javascript/editors/fckeditor/default.php
javascript/editors/fckeditor/editor/filemanager/connectors/phpws/config.php
javascript/editors/fckeditor/head.js

Version 1.9.6
---------------------------------------------------------------------
10 August 2009
+ recaptcha script given full path to settings file
+ Time.php - Added a intval to the relativeTime timestamp.
+ Moved fckeditor connector directory
+ Updated : javascript/editors/fckeditor/editor/filemanager/connectors/phpws
javascript/editors/fckeditor/editor/custom.js

4 August 2009
+ Script tags should now appear for anon users if config.php allows them.

8 July 2009
+ Changed confirm body link. href="#" confuses poor IE
+ "param" added to text_settings.php
+ fckeditor default.php changed to fix file relative links


Version 1.9.5
---------------------------------------------------------------------
12 June 2009
+ Added ignore_dups parameter to database for indexby. If true,
multiple entries can not be indexed on the same key.

9 June 2009
+ Patch# 2800703 - fixed checkBranch for newer php5. Thanks Andrew Patterson.

25 May 2009
+ addValues in Link.php accepts arrays of values now

22 April 2009
+ Added second parameter to PHPWS_Core::stripObjValues - strip_null.
  If true, then null values will not be added to array. False will
  include them.

9 April 2009
+ Removed pass-by reference check from Setup.
+ Added some status checks to setup.

8 April 2009